--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,26 +8,26 @@ services:
       - "90:5000"
     depends_on:
       - redis
+      - mongodb
 
   redis:
-   
     image: redis
     ports:
       - "6379:6379"
 
   mongodb:
     container_name: mongodb
-    image: skazuki/alpine-mongodb
+    image: aymen94/mongodb-alpine
     restart: always
-  mongo-express:
-    container_name: mongo-express
-    image: skazuki/alpine-mongo-express
-    restart: always
-    environment:
-      - ME_CONFIG_MONGODB_SERVER=mongodb
-      - VCAP_APP_HOST=0.0.0.0
-      - VCAP_APP_PORT=8081
     ports:
-      - 8081:8081
-    links:
-      - mongodb:mongodb
+      - 27017:27017
+    environment:
+      MONGO_INITDB_DATABASE: local
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: root
+      MONGODB_DB: production
+      MONGODB_USER: user
+      MONGODB_PASSWORD: pass
+    volumes:
+      - ./mongo_data:/data/db
+      - ./init.sh:/docker-entrypoint-initdb.d/init.sh:ro
