--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,24 +10,14 @@ services:
       - redis
       - mongodb
 
-  redis:
-    image: redis
-    ports:
-      - "6379:6379"
-
   mongodb:
-    container_name: mongodb
-    image: aymen94/mongodb-alpine
-    restart: always
+    image: mongo:6-jammy
     ports:
-      - 27017:27017
+      - '27017:27017'
     environment:
-      MONGO_INITDB_DATABASE: local
-      MONGO_INITDB_ROOT_USERNAME: root
-      MONGO_INITDB_ROOT_PASSWORD: root
-      MONGODB_DB: production
-      MONGODB_USER: user
-      MONGODB_PASSWORD: pass
+      MONGO_INITDB_ROOT_USERNAME: admin
+      MONGO_INITDB_ROOT_PASSWORD: admin
     volumes:
+      - ./init-mongo.js:/docker-entrypoint-initdb.d/init-mongo.js:ro
       - ./mongo_data:/data/db
-      - ./init.sh:/docker-entrypoint-initdb.d/init.sh:ro
+      
