--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,13 +10,10 @@ services:
       - mongodb
 
   mongodb:
-    image: mongo:6-jammy
+    image: dannyben/alpine-mongo:latest
     ports:
       - '27017:27017'
-    environment:
-      MONGO_INITDB_ROOT_USERNAME: admin
-      MONGO_INITDB_ROOT_PASSWORD: admin
     volumes:
-      - ./init-mongo.js:/docker-entrypoint-initdb.d/init-mongo.js:ro
       - ./mongo_data:/data/db
-      
+
+
