--- a/nginx-conf/sites-enabled/example.conf
+++ b/nginx-conf/sites-enabled/example.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name iguana.devops;
+    server_name iguana-devops.pp.ua;
 
     location / {
         proxy_pass http://web:5000;
@@ -20,7 +20,7 @@ server {
 
 server {
     listen 443 ssl;
-    server_name iguana.devops;
+    server_name iguana-devops.pp.ua;
 
     ssl_certificate /etc/letsencrypt/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/privkey.pem;
