--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,6 +36,13 @@ services:
     volumes:
       - ./mongo_data:/data/db
 
+  redis:
+    image: redis
+    networks:
+      - back
+    expose:
+      - "6379"
+
 networks:
   front:
     driver: bridge
