--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,15 +5,19 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - name: Check current directory
+        run: pwd
+      - name: List contents
+        run: ls -alh
       - name: Build the stack
         run: docker compose up -d
-        working-directory: ./tests
+        working-directory: tests
       - name: Check if docker-compose has the service 'web'
         run: docker compose ps --services | grep web
-        working-directory: ./tests
+        working-directory: tests
       - name: Check if docker-compose has the service 'redis'
         run: docker compose ps --services | grep redis
-        working-directory: ./tests
+        working-directory: tests
       - name: Test containers functionality
         uses: cypress-io/github-action@v6
         env:
