--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,11 +4,15 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
+    
       - uses: actions/checkout@v2
+      
       - name: Check current directory
         run: pwd
+        
       - name: List contents
         run: ls -alh
+        
       - name: Build the stack
         run: docker compose up -d
         working-directory: test  
@@ -16,9 +20,15 @@ jobs:
       - name: Check if docker-compose has the service 'web'
         run: docker compose ps --services | grep web || true
         working-directory: test
+        
       - name: Check if docker-compose has the service 'redis'
         run: docker compose ps --services | grep redis || true
         working-directory: test
+
+      - name: Check if docker-compose has the service 'mongodb'
+        run: docker compose ps --services | grep mongodb || true
+        working-directory: test
+        
       - name: Test containers functionality
         uses: cypress-io/github-action@v6
         env:
