--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,16 +19,23 @@ services:
   web:
     container_name: web
     build: .
+    restart: always
     networks:
       - front
       - back
-    expose:
-      - "5000"
+    ports:
+      - "5000:5000"
+    environment:
+      REDIS_HOST: ${REDIS_HOST}
+      REDIS_PORT: ${REDIS_PORT}
+      REDIS_PASSWORD: ${REDIS_PASSWORD}
+      MONGODB_URI: ${MONGODB_URI}
     depends_on:
       - mongodb
 
   mongodb:
     image: dannyben/alpine-mongo:latest
+    restart: always
     networks:
       - back
     expose:
@@ -37,11 +44,14 @@ services:
       - ./mongo_data:/data/db
 
   redis:
-    image: redis
+    image: redis:6.2-alpine
+    restart: always
     networks:
       - back
     expose:
       - "6379"
+    volumes: 
+      - ./data:/data
 
 networks:
   front:
