--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
         run: ls -alh
         
       - name: Build the stack
-        run: docker compose up -d
+        run: REDIS_HOST=${{ secrets.REDIS_HOST }} REDIS_PORT=${{ secrets.REDIS_PORT }} MONGODB_URI=${{ secrets.MONGODB_URI }} docker compose up -d
         working-directory: test  
 
       - name: Check if docker-compose has the service 'web'
